--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,7 +218,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/mooo.jpeg") top center;
+  background: url("../img/mo.jpg")  left;
   background-size: cover;
 }
 
